baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_builtin_namespace_llm.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
class            llm.OrchestrationStep            <builtin>/baml/ns_llm/llm.baml:1
class            llm.ExecutionContext             <builtin>/baml/ns_llm/llm.baml:6
class            llm.PlannerState                 <builtin>/baml/ns_llm/llm.baml:12
function         llm.render_prompt                <builtin>/baml/ns_llm/llm.baml:32
function         llm.build_request                <builtin>/baml/ns_llm/llm.baml:41
function         llm.build_request_stream         <builtin>/baml/ns_llm/llm.baml:48
function         llm.parse                        <builtin>/baml/ns_llm/llm.baml:59
function         llm.call_llm_function            <builtin>/baml/ns_llm/llm.baml:69
function         llm.stream_llm_function          <builtin>/baml/ns_llm/llm.baml:87
class            llm.PromptAst                    <builtin>/baml/ns_llm/llm_types.baml:1
enum             llm.ClientType                   <builtin>/baml/ns_llm/llm_types.baml:5
class            llm.RetryPolicy                  <builtin>/baml/ns_llm/llm_types.baml:11
class            llm.Client                       <builtin>/baml/ns_llm/llm_types.baml:20
class            llm.MediaUrlHandler              <builtin>/baml/ns_llm/llm_types.baml:358
class            llm.PrimitiveClientOptions       <builtin>/baml/ns_llm/llm_types.baml:365
class            llm.AzureOpenAiOptions           <builtin>/baml/ns_llm/llm_types.baml:386
class            llm.AnthropicOptions             <builtin>/baml/ns_llm/llm_types.baml:394
class            llm.VertexAiOptions              <builtin>/baml/ns_llm/llm_types.baml:399
class            llm.BedrockOptions               <builtin>/baml/ns_llm/llm_types.baml:407
class            llm.StreamAccumulator            <builtin>/baml/ns_llm/llm_types.baml:420
class            llm.StreamCache                  <builtin>/baml/ns_llm/llm_types.baml:456
class            llm.Stream                       <builtin>/baml/ns_llm/llm_types.baml:472
class            llm.PrimitiveClient              <builtin>/baml/ns_llm/llm_types.baml:537
function         llm.from_shorthand               <builtin>/baml/ns_llm/llm_types.baml:597
function         llm.get_jinja_template           <builtin>/baml/ns_llm/llm_types.baml:603
function         llm.get_return_type              <builtin>/baml/ns_llm/llm_types.baml:607
function         llm.get_stream_return_type       <builtin>/baml/ns_llm/llm_types.baml:616
function         llm.__sap_parse_final            <builtin>/baml/ns_llm/llm_types.baml:621
function         llm.__sap_parse_partial          <builtin>/baml/ns_llm/llm_types.baml:626
