baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_builtin_namespace_math.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
function         math.trunc                       <builtin>/baml/ns_math/math.baml:1
