baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_builtin_package_listing.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
class            Bool                             <builtin>/baml/bool.baml:1
class            Array                            <builtin>/baml/containers.baml:1
class            Map                              <builtin>/baml/containers.baml:50
function         deep_copy                        <builtin>/baml/core.baml:2
function         deep_equals                      <builtin>/baml/core.baml:7
class            Float                            <builtin>/baml/float.baml:1
class            Int                              <builtin>/baml/int.baml:1
class            Null                             <builtin>/baml/null.baml:1
class            String                           <builtin>/baml/string.baml:1
class            TypeValue                        <builtin>/baml/type_class.baml:9
class            Uint8Array                       <builtin>/baml/uint8array.baml:1
function         env.get                          <builtin>/baml/ns_env/env.baml:1
function         env.get_or_panic                 <builtin>/baml/ns_env/env.baml:5
class            errors.InvalidArgument           <builtin>/baml/ns_errors/errors.baml:1
class            errors.ParseError                <builtin>/baml/ns_errors/errors.baml:7
class            errors.Io                        <builtin>/baml/ns_errors/errors.baml:11
class            errors.Timeout                   <builtin>/baml/ns_errors/errors.baml:15
class            errors.Unsupported               <builtin>/baml/ns_errors/errors.baml:20
class            errors.AccessError               <builtin>/baml/ns_errors/errors.baml:24
class            errors.RenderPrompt              <builtin>/baml/ns_errors/errors.baml:28
class            errors.NotImplemented            <builtin>/baml/ns_errors/errors.baml:32
class            errors.LlmClient                 <builtin>/baml/ns_errors/errors.baml:36
class            errors.DevOther                  <builtin>/baml/ns_errors/errors.baml:40
class            errors.HostPanic                 <builtin>/baml/ns_errors/errors.baml:44
class            errors.StackFrame                <builtin>/baml/ns_errors/stack_trace.baml:1
class            errors.StackTrace                <builtin>/baml/ns_errors/stack_trace.baml:7
function         events.send                      <builtin>/baml/ns_events/events.baml:3
class            fs.File                          <builtin>/baml/ns_fs/fs.baml:1
function         fs.open                          <builtin>/baml/ns_fs/fs.baml:37
function         fs.exists                        <builtin>/baml/ns_fs/fs.baml:41
function         fs.remove                        <builtin>/baml/ns_fs/fs.baml:45
function         fs.size                          <builtin>/baml/ns_fs/fs.baml:49
function         fs.read                          <builtin>/baml/ns_fs/fs.baml:53
function         fs.write                         <builtin>/baml/ns_fs/fs.baml:57
function         fs.write_bytes                   <builtin>/baml/ns_fs/fs.baml:61
class            fs.DirEntry                      <builtin>/baml/ns_fs/fs.baml:65
class            fs.MkdirOptions                  <builtin>/baml/ns_fs/fs.baml:72
function         fs.read_dir                      <builtin>/baml/ns_fs/fs.baml:76
function         fs.mkdir                         <builtin>/baml/ns_fs/fs.baml:80
class            glob.ScanOptions                 <builtin>/baml/ns_glob/glob.baml:1
class            glob.Glob                        <builtin>/baml/ns_glob/glob.baml:10
function         glob.new                         <builtin>/baml/ns_glob/glob.baml:22
class            http.Request                     <builtin>/baml/ns_http/http.baml:1
class            http.Response                    <builtin>/baml/ns_http/http.baml:8
class            http.SseStream                   <builtin>/baml/ns_http/http.baml:27
function         http.fetch                       <builtin>/baml/ns_http/http.baml:42
function         http.send                        <builtin>/baml/ns_http/http.baml:46
function         http.fetch_sse                   <builtin>/baml/ns_http/http.baml:50
function         io.input                         <builtin>/baml/ns_io/io.baml:1
type             json.json                        <builtin>/baml/ns_json/json.baml:1
class            json.JsonParseError              <builtin>/baml/ns_json/json.baml:3
class            json.JsonDecodeError             <builtin>/baml/ns_json/json.baml:6
class            json.JsonSerializationError      <builtin>/baml/ns_json/json.baml:10
function         json.parse                       <builtin>/baml/ns_json/json.baml:17
function         json.stringify                   <builtin>/baml/ns_json/json.baml:22
function         json.stringify_pretty            <builtin>/baml/ns_json/json.baml:27
function         json.to_string                   <builtin>/baml/ns_json/json.baml:41
function         json.to_json                     <builtin>/baml/ns_json/json.baml:61
function         json.from_string                 <builtin>/baml/ns_json/json.baml:75
function         json.from_json                   <builtin>/baml/ns_json/json.baml:101
function         json.field                       <builtin>/baml/ns_json/json.baml:112
class            llm.OrchestrationStep            <builtin>/baml/ns_llm/llm.baml:1
class            llm.ExecutionContext             <builtin>/baml/ns_llm/llm.baml:6
class            llm.PlannerState                 <builtin>/baml/ns_llm/llm.baml:12
function         llm.render_prompt                <builtin>/baml/ns_llm/llm.baml:32
function         llm.build_request                <builtin>/baml/ns_llm/llm.baml:41
function         llm.build_request_stream         <builtin>/baml/ns_llm/llm.baml:48
function         llm.parse                        <builtin>/baml/ns_llm/llm.baml:59
function         llm.call_llm_function            <builtin>/baml/ns_llm/llm.baml:69
function         llm.stream_llm_function          <builtin>/baml/ns_llm/llm.baml:87
class            llm.PromptAst                    <builtin>/baml/ns_llm/llm_types.baml:1
enum             llm.ClientType                   <builtin>/baml/ns_llm/llm_types.baml:5
class            llm.RetryPolicy                  <builtin>/baml/ns_llm/llm_types.baml:11
class            llm.Client                       <builtin>/baml/ns_llm/llm_types.baml:20
class            llm.MediaUrlHandler              <builtin>/baml/ns_llm/llm_types.baml:358
class            llm.PrimitiveClientOptions       <builtin>/baml/ns_llm/llm_types.baml:365
class            llm.AzureOpenAiOptions           <builtin>/baml/ns_llm/llm_types.baml:386
class            llm.AnthropicOptions             <builtin>/baml/ns_llm/llm_types.baml:394
class            llm.VertexAiOptions              <builtin>/baml/ns_llm/llm_types.baml:399
class            llm.BedrockOptions               <builtin>/baml/ns_llm/llm_types.baml:407
class            llm.StreamAccumulator            <builtin>/baml/ns_llm/llm_types.baml:420
class            llm.StreamCache                  <builtin>/baml/ns_llm/llm_types.baml:456
class            llm.Stream                       <builtin>/baml/ns_llm/llm_types.baml:472
class            llm.PrimitiveClient              <builtin>/baml/ns_llm/llm_types.baml:537
function         llm.from_shorthand               <builtin>/baml/ns_llm/llm_types.baml:597
function         llm.get_jinja_template           <builtin>/baml/ns_llm/llm_types.baml:603
function         llm.get_return_type              <builtin>/baml/ns_llm/llm_types.baml:607
function         llm.get_stream_return_type       <builtin>/baml/ns_llm/llm_types.baml:616
function         llm.__sap_parse_final            <builtin>/baml/ns_llm/llm_types.baml:621
function         llm.__sap_parse_partial          <builtin>/baml/ns_llm/llm_types.baml:626
function         math.trunc                       <builtin>/baml/ns_math/math.baml:1
class            media.Pdf                        <builtin>/baml/ns_media/media.baml:1
class            media.Audio                      <builtin>/baml/ns_media/media.baml:42
class            media.Video                      <builtin>/baml/ns_media/media.baml:83
class            media.Image                      <builtin>/baml/ns_media/media.baml:124
class            net.Socket                       <builtin>/baml/ns_net/net.baml:1
function         net.connect                      <builtin>/baml/ns_net/net.baml:13
class            panics.DivisionByZero            <builtin>/baml/ns_panics/panics.baml:1
class            panics.IndexOutOfBounds          <builtin>/baml/ns_panics/panics.baml:5
class            panics.MapKeyNotFound            <builtin>/baml/ns_panics/panics.baml:10
class            panics.StackOverflow             <builtin>/baml/ns_panics/panics.baml:14
class            panics.AssertionFailed           <builtin>/baml/ns_panics/panics.baml:18
class            panics.Unreachable               <builtin>/baml/ns_panics/panics.baml:22
class            panics.Cancelled                 <builtin>/baml/ns_panics/panics.baml:27
class            panics.UserPanic                 <builtin>/baml/ns_panics/panics.baml:32
class            panics.AllocFailure              <builtin>/baml/ns_panics/panics.baml:39
type             panics.Panic                     <builtin>/baml/ns_panics/panics.baml:43
class            stream.StreamFinished            <builtin>/baml/ns_stream/stream.baml:4
class            stream.StreamNoYield             <builtin>/baml/ns_stream/stream.baml:9
class            sys.ProcessOptions               <builtin>/baml/ns_sys/sys.baml:1
class            sys.ShellOutput                  <builtin>/baml/ns_sys/sys.baml:8
function         sys.exec                         <builtin>/baml/ns_sys/sys.baml:18
function         sys.shell                        <builtin>/baml/ns_sys/sys.baml:22
function         sys.sleep                        <builtin>/baml/ns_sys/sys.baml:26
function         sys.panic                        <builtin>/baml/ns_sys/sys.baml:30
function         sys.now_ms                       <builtin>/baml/ns_sys/sys.baml:34
function         sys.argv                         <builtin>/baml/ns_sys/sys.baml:39
function         unstable.string                  <builtin>/baml/ns_unstable/unstable.baml:2
