baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_describe_alias_string.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: "describe_via_dispatch(&db, \"string\")"
---
class String  (string)  <builtin>/baml/string.baml:17-847

/// A UTF-8 encoded string.
///
/// Strings are immutable: every method here returns a new string rather than
/// modifying `self`. Quoted strings may span multiple lines; backtick strings
/// interpolate.
///
/// Positions are **character** (Unicode code point) offsets, never byte offsets.
/// `length`, `at`, `code_point_at`, `slice`, `index_of`, and `last_index_of` all
/// agree with each other, and all disagree with `byte_length` as soon as one
/// character takes more than one UTF-8 byte. A method taking a position also
/// accepts a negative one, counting from the end. Python's `str` indexes the same
/// way; JavaScript indexes by UTF-16 unit and so can cut an emoji in half.
///
/// The `is_*` predicates ask whether **every** character has the property, so all
/// of them are true on the empty string. The `is_ascii_*` family is false for any
/// character at or above U+0080.
class String {}

methods:
  /// Returns the number of characters (Unicode code points).
  function length(self) -> int throws never  <builtin>/baml/string.baml:52-54
  /// Alias for `length()`.
  function char_count(self) -> int throws never  <builtin>/baml/string.baml:57-59
  /// Returns true if the string has no characters.
  function is_empty(self) -> bool throws never  <builtin>/baml/string.baml:70-72
  /// Returns the length in UTF-8 bytes.
  function byte_length(self) -> int throws never  <builtin>/baml/string.baml:87-89
  /// Returns the lowercase equivalent of this string.
  function to_lower_case(self) -> string throws never  <builtin>/baml/string.baml:106-108
  … 76 more lines (re-run with a higher `--budget` to see more; use `--budget 131` for full output)

static_methods:
  … 6 more lines (re-run with a higher `--budget` to see more; use `--budget 131` for full output)

implementations (5):
  … 15 more lines (re-run with a higher `--budget` to see more; use `--budget 131` for full output)

references (0):
