baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_describe_class.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
class Point  types.baml:2-5

class Point {
    x: int,
    y: int,
}

references (2):
  funcs.baml:3  function ExtractPoint(text: string) -> Point {
  funcs.baml:4  let result = Point { x: 0, y: 0 };
