baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_describe_class_impl_method_drill_in.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
method decode  (implements Decoder<string>)  interfaces.baml:10-12

        function decode(self, raw: string) -> Self.Output {
            return 1
        }

container:
  class            IntDecoder                       interfaces.baml:7

references (0):
