baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_describe_class_shows_associated_type_bindings.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
class IntDecoder  interfaces.baml:7-14

class IntDecoder {}

implementations (2):
  implement Decoder<string> for IntDecoder  interfaces.baml:8
    type Output = int
    function decode(self, raw: string) -> int throws never  interfaces.baml:10-12
  implement<T> Concrete for T  <builtin>/baml/core.baml:21

references (0):
