baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_describe_class_with_methods.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: "capture_description(&db, &descs[0], 30)"
---
class User  methods.baml:2-13

class User {
    name: string,
    age: int,
}

methods:
  function Greet(self) -> string throws never  methods.baml:6-8
  function IsAdult(self) -> bool throws never  methods.baml:10-12

implementations (1):
  implement<T> Concrete for T  <builtin>/baml/core.baml:21

references (0):
